# daria_scraper

./: .gitignore  Dockerfile  README.md  pyproject.toml
daria_scraper/: config.py  main.py
daria_scraper/models/: character.py
daria_scraper/parsers/: html.py
daria_scraper/scrapers/: alter_ego.py  base.py  character.py
daria_scraper/services/: http.py  storage.py
daria_scraper/utils/: logging.py
