[tool.poetry]
name = "daria-scraper"
version = "0.1.0"
description = "Web scraper for Daria character information"
authors = ["RodrighoNS <rod.nvrr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
daria-scraper = "daria_scraper.main:main"
